--- a/Incubadora/Web.config
+++ b/Incubadora/Web.config
@@ -11,7 +11,8 @@
     
   </configSections>
   <connectionStrings>
-    <add name="IncubadoraDataBaseEntities" connectionString="metadata=res://*/IncubadoraModel.csdl|res://*/IncubadoraModel.ssdl|res://*/IncubadoraModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-CVOMG1OH;initial catalog=IncubadoraDataBase;persist security info=True;user id=sa;password=Sistemas410;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+   <!-- <add name="IncubadoraDataBaseEntities" connectionString="metadata=res://*/IncubadoraModel.csdl|res://*/IncubadoraModel.ssdl|res://*/IncubadoraModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-CVOMG1OH;initial catalog=IncubadoraDataBase;persist security info=True;user id=sa;password=Sistemas410;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /> -->
+  <add name="IncubadoraDataBaseEntities" connectionString="metadata=res://*/IncubadoraModel.csdl|res://*/IncubadoraModel.ssdl|res://*/IncubadoraModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-M9HDIM2;initial catalog=IncubadoraDataBase;persist security info=True;user id=sa;password=1234;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -103,15 +104,15 @@
     Example: "Posts/{postKey}/Edit" -> "posts/{postKey}/edit"
   -->
   <routeJs exposeAllRoutes="true" lowerCaseUrls="false" />
-  <system.codedom>
-    <compilers>
-      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701" />
-      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
-    </compilers>
-  </system.codedom>
   <entityFramework>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <system.codedom>
+    <compilers>
+      <compiler extension=".cs" language="c#;cs;csharp" warningLevel="4" compilerOptions="/langversion:7.0 /nowarn:1659;1699;1701;612;618" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=3.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+      <compiler extension=".vb" language="vb;vbs;visualbasic;vbscript" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008,40000,40008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=3.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+    </compilers>
+  </system.codedom>
 </configuration>
